--- a/src/Styles/homeStyle.css
+++ b/src/Styles/homeStyle.css
@@ -8,7 +8,9 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    
     background-color: rgb(255,255,255);
-    border-radius: 3px solid rgb(110,68,111);
+    border-radius: 3px;
+    border: 4px solid rgb(110,68,111);
     
 }
