--- a/src/Styles/homeStyle.css
+++ b/src/Styles/homeStyle.css
@@ -1,16 +1,72 @@
 .dark-background{
-    align-items: center;
     background-color: rgb(74,21,75);
 
+}
+
+.sub-header{
+    display: inline;
+    color: rgb(255,255,255);
+    font-weight: 700;
+    font-size: 38px;
+    margin-left: 10px;
 }
 
 .workspaces{
     display: flex;
     flex-direction: column;
     gap: 5px;
-    
+    align-items: center;
+    font-size: 18px;
+    min-height: 82px;
     background-color: rgb(255,255,255);
     border-radius: 3px;
     border: 4px solid rgb(110,68,111);
+    padding-right: 16px;
+    padding-top: 16px;
     
+}
+
+.create-workspace-button{
+    background-color: rgb(255,255,255);
+    align-items: center;
+    font-size: 16px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding-right: 16px;
+    padding-top: 16px;
+    
+}
+
+.workspace-list-container{
+    display: block;
+    padding-right: 16px;
+    padding-top: 16px;
+}
+
+.workspace-detail{
+    display: grid;
+    grid-template-columns: 91px 380.375px;
+    grid-template-rows: 75px 75px;
+    align-items: center;
+    font-size: 16px;
+}
+
+.detail-workspace-button{
+    display: block;
+    background-color: rgb(97, 31, 105);
+    grid-column-end: 3;
+    grid-column-start: 1;
+    grid-row-end: 3;
+    grid-row-start: 2;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    text-align: center;
+    text-size-adjust: 100%;
+    text-transform: uppercase;
+    text-decoration-style: solid;
+    cursor: pointer;
 }
